Only treat a carriage return as delimiter punctuation before a newline
readLine dropped every CR it saw, not just the one in a CRLF line ending, so a
payload containing a carriage return was silently edited on the way through. A
transport should hand up the bytes it was given. The CR is now held back one byte
and emitted unless a newline follows it, which keeps CRLF tolerance while leaving
content alone.

Two tests cover it -- a CR inside the payload, and "\r\r\n" where exactly one of
the two carriage returns is content -- and both were control-tested against the
previous form to confirm they fail there. The existing CRLF-tolerance test still
passes unchanged, which is the property that had to survive this.

Also Long.valueOf rather than new Long for the accepted socket peer. Note the
allocation saving does not really apply: the cache only covers -128..127 and a
native peer never lands there, so this is the better idiom rather than a fix.
The adjacent connectSocket has the same shape and is left as pre-existing.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>